--- a/prelaunch.json
+++ b/prelaunch.json
@@ -6,11 +6,13 @@
     "replace_thumbails": true,
     "thumbnail_match": "webcamthumbnail.png",
     "source_directory": "/assets/images",
-    "rtl": true
+    "rtl": true,
+    "afk": "/assets/AFK"
   },
   "time": {
     "start": "00:02:30",
     "run": "00:00:15",
     "repeat": "00:05:00"
-  }
+  },
+  "afk": 0.1
 }
