--- a/prelaunch.json
+++ b/prelaunch.json
@@ -1,18 +1,17 @@
 {
   "images": {
-    "replace": true,
-    "target_directory": "",
-    "match": "webcam.png",
-    "replace_thumbails": true,
-    "thumbnail_match": "webcamthumbnail.png",
-    "source_directory": "/assets/images",
+    "targetDirectory": "",
+    "targetNameMustMatch": "webcam.png",
+    "targetThumbnailNameMustMatch": "webcamthumbnail.png",
     "rtl": true,
     "afk": "/assets/AFK"
   },
   "time": {
     "start": "00:02:30",
-    "run": "00:00:30",
+    "run": "00:00:15",
     "repeat": "00:05:00"
   },
-  "afk": 0.1
+  "afk": 0.1,
+  "targets": [],
+  "avoid": []
 }
